--- a/app/lol/src/main/res/values/strings.xml
+++ b/app/lol/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">lol</string>
+    <string name="input_champion_name">챔피언의 이름을 입력하세요.</string>
 </resources>
