--- a/app/lol/src/main/res/values/strings.xml
+++ b/app/lol/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">lol</string>
     <string name="input_champion_name">챔피언의 이름을 입력하세요.</string>
+    <string name="firebase_notification_channel_id">푸시 알림</string>
 </resources>
