--- a/app/gps_alarm/src/main/res/values/strings.xml
+++ b/app/gps_alarm/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="bottom_alarm">알람</string>
     <string name="bottom_maps">지도</string>
     <string name="bottom_setting">설정</string>
-
     <string name="create_alarm">알람 만들기</string>
+    <string name="alarm_detail">알람 상세</string>
 </resources>
