--- a/app/gps_alarm/src/main/res/values-night/strings.xml
+++ b/app/gps_alarm/src/main/res/values-night/strings.xml
@@ -11,6 +11,7 @@
     <!-- end navigation -->
 
     <!-- start notification -->
+    <string name="notification_channel_id">gpsAlarm</string>
     <string name="notification_channel_name">위치 알람 설정</string>
     <string name="notification_channel_description">알림으로 사용자의 위치가 어딘지 확인할 수 있습니다.</string>
     <!-- end notification -->
