--- a/app/gps_alarm/src/main/res/values/strings.xml
+++ b/app/gps_alarm/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="notification_channel_id">gpsAlarm</string>
     <string name="notification_channel_name">위치 알람 설정</string>
     <string name="notification_channel_description">알림으로 사용자의 위치가 어딘지 확인할 수 있습니다.</string>
+    <string name="fab_content_desc">알람 추가</string>
     <!-- end notification -->
 </resources>
